--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.1",
   "private": true,
   "scripts": {
+    "cms": "netlify dev",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "export": "next build && next export -o ./dist",
     "test": "jest",
-    "lint": "next lint"
+    "lint": "next lint",
+    "proxy": "npx netlify-cms-proxy-server"
   },
   "dependencies": {
     "@mapbox/rehype-prism": "^0.8.0",
@@ -21,11 +23,12 @@
     "next-mdx-remote": "^4.4.1",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
+    "react-codepen-embed": "^1.1.0",
     "react-dom": "17.0.2",
     "react-instagram-embed": "^3.0.0",
     "react-schemaorg": "^2.0.0",
     "react-twitter-embed": "^3.0.3",
-    "react-youtube": "^7.13.1",
+    "react-youtube": "^10.1.0",
     "schema-dts": "^1.0.0"
   },
   "devDependencies": {
