--- a/meta/tags.yml
+++ b/meta/tags.yml
@@ -43,3 +43,13 @@ tags:
     parent: writing
   - slug: stolen
     name: stolen
+  - slug: pyschedelic
+    name: pyschedelic
+  - slug: pointillism
+    name: pointillism
+  - slug: nature
+    name: nature
+  - slug: photographs
+    name: photographs
+  - slug: generative
+    name: generative
