--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "17.0.2",
     "react-instagram-embed": "^3.0.0",
     "react-schemaorg": "^2.0.0",
+    "react-social-media-embed": "^2.3.5",
     "react-twitter-embed": "^3.0.3",
     "react-youtube": "^10.1.0",
     "schema-dts": "^1.0.0"
