--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "schema-dts": "^1.0.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.7",
     "@types/react": "18.0.1",
